[gd_scene load_steps=11 format=3 uid="uid://cadinpk8qwq4k"]

[ext_resource type="Theme" uid="uid://dti8vwajgajm5" path="res://scenes/interface/game_ui_theme.tres" id="1_eegod"]
[ext_resource type="Script" path="res://scenes/interface/tools_panel.gd" id="2_6iich"]
[ext_resource type="Texture2D" uid="uid://i2fq3ppvfw0e" path="res://assets/Objects/Basic_tools_and_meterials.png" id="2_u1e02"]
[ext_resource type="Texture2D" uid="uid://cm4exrpirssy7" path="res://assets/Objects/Chest.png" id="3_83am3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_u7krl"]
atlas = ExtResource("2_u1e02")
region = Rect2(16, 0, 16, 16)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_s1hur"]
load_path = "res://.godot/imported/Basic_tools_and_meterials.png-6068c3a2093e406e3d56857f52c6b390.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_vimff"]
atlas = SubResource("CompressedTexture2D_s1hur")
region = Rect2(32, 0, 16, 16)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_4oqah"]
load_path = "res://.godot/imported/Basic_tools_and_meterials.png-6068c3a2093e406e3d56857f52c6b390.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_oj7jx"]
atlas = SubResource("CompressedTexture2D_4oqah")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_khd3e"]
atlas = ExtResource("3_83am3")
region = Rect2(16, 16, 16, 16)

[node name="ToolsPanel" type="PanelContainer"]
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("1_eegod")
theme_type_variation = &"DarkWoodPanel"
script = ExtResource("2_6iich")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ToolAxe" type="Button" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
theme_type_variation = &"ToolButton"
icon = SubResource("AtlasTexture_u7krl")
icon_alignment = 1

[node name="ToolPick" type="Button" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
theme_type_variation = &"ToolButton"
icon = SubResource("AtlasTexture_vimff")
icon_alignment = 1

[node name="ToolRock" type="Button" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
theme_type_variation = &"ToolButton"
icon = SubResource("AtlasTexture_oj7jx")
icon_alignment = 1

[node name="ToolSteal" type="Button" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
theme_type_variation = &"ToolButton"
icon = SubResource("AtlasTexture_khd3e")
icon_alignment = 1

[connection signal="pressed" from="MarginContainer/HBoxContainer/ToolAxe" to="." method="_on_tool_axe_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/ToolPick" to="." method="_on_tool_pick_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/ToolRock" to="." method="_on_tool_rock_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/ToolSteal" to="." method="_on_tool_steal_pressed"]
